# 2048-game

./: .coverage  .dockerignore  Definition.md  Dockerfile  README.md  implementationDocument.md  koodi.py  render.yaml  testingDocument.md
2048-game/: .coverage  Dockerfile  pyproject.toml  requirements.txt  setup.py  tasks.py  web_app.py
2048-game/setupfile.egg-info/: PKG-INFO  SOURCES.txt
2048-game/src/: .coverage  ai_gameloop.py  ai_solver.py  ai_solver_logic.py  game_logic.py  gameloop.py  graphics.py  heuristic.py  main.py  play.py  play_normal.py  play_with_Ai.py
2048-game/src/tests/: test_ai_logic.py  test_another.py  test_logic.py  test_main.py
2048-game/static/: script.js  style.css
2048-game/templates/: index.html
2048-game/tests/: _test.py
weeklyReports/: week_1_report.md  week_2_report.md  week_3_report.md  week_4_report,md  week_5_report.md  week_6_report.md
